# vipp-nbody-bench

./: README.md
gravity/: CMakeLists.txt
gravity/experiment/: .gitignore  build_experiments.sh  check_time.sh  different_precision.sh  make_graph_delta_t.py  make_graph_delta_t_double.py  make_graph_p.py  make_graph_time.py  run.sh  run_experiments.sh  run_p.sh  search_timestep.sh
gravity/include/: benchmark.hpp  fmm.hpp  octree.hpp  problem.hpp  solver.hpp  solver_ref.hpp  solver_ref_naive.hpp
gravity/src/: main.cpp
gravity/test/: test_benchmark.cpp  test_fmm.cpp  test_octree.cpp  test_problem.cpp  test_solver_ref.cpp  test_solver_ref_naive.cpp
h_matrix/: CMakeLists.txt  doxygen.conf.in
h_matrix/experiment/: alpha_compare.sh  alpha_compare_vis.py  approx_rank.sh  build_experiments.sh  error-template.g  error.sh  float_compare.sh  float_compare_vis.py  matrix.g  matrix.sh  plot_all.ipynb  plot_float-compare.py  pow.cpp  random_vector.sh  random_vector_vis.py  run_experiments.sh  split_compare.sh  split_compare_vis.py
h_matrix/include/: benchmark.hpp  matrix.hpp  problem.hpp  solver.hpp  solver_ref.hpp
h_matrix/src/: main.cpp
h_matrix/test/: test_benchmark.cpp  test_matrix.cpp  test_problem.cpp  test_solver_ref.cpp
t_sne/: CMakeLists.txt
t_sne/experiment/: build_experiments.sh  plot.g  plot.sh  run.sh  run_bhtsne.py  run_bhtsne.sh  run_experiments.sh  run_float.sh  run_theta.sh
t_sne/include/: barnes_hut_tree.hpp  benchmark.hpp  problem.hpp  solver.hpp  solver_ref.hpp  solver_ref_naive.hpp  vantage_point_tree.hpp
t_sne/src/: main.cpp
t_sne/test/: test_barnes_hut_tree.cpp  test_benchmark.cpp  test_problem.cpp  test_solver_ref.cpp  test_solver_ref_naive.cpp  test_vantage_point_tree.cpp
